Temporarily working on downloading the latest version